--- a/style/template.css
+++ b/style/template.css
@@ -5,8 +5,8 @@ textarea{font-family:Calibri;}
 
 .form_title{font-size:18px;line-height:25px;}
 .form_title .favicon{vertical-align: middle;
-  margin-right: 10px;width: 22px;
-  height: 22px;}
+  margin-right: 10px;width: 16px;
+  height: 16px;}
   .form_title span{vertical-align:middle;}
   .rightToLeft .form_title .favicon{margin-right: 0;margin-left:10px;}
 .close{right:20px;top:24px;padding:3px;position:absolute;cursor:pointer;}
@@ -19,24 +19,24 @@ textarea{font-family:Calibri;}
 .about_form{vertical-align:middle;line-height:20px;text-align:center;width:375px;height:auto;background:#000000;padding:20px;color:#ffffff;font-size:15px;font-family:Calibri;position:absolute;}
 .about_form .form_title{text-align:left;}
 .about_form .content_title{opacity:0.8;border:1px solid transparent;top:51px;cursor:pointer;width:105px;height:34px;position:absolute;line-height:34px;vertical-align:middle;text-align:center;}
-.about_form .contact_title{left:51%;}
 .about_form .content_title:hover{opacity:1;}
+.about_form .contact_title{left:51%;}
 .about_form .description_title{right:51%;}
 .about_form .focus{background:rgba(255,255,255,0.25);opacity:1;}
 .about_form .content{margin-top:50px;width:100%;}
 .about_form .content1{display:none;height:220px;overflow:auto;}
 .about_form .content2{height:220px;overflow:hidden;position: relative;}
 .about_form .description{text-align:left;}
-.about_form .item{width:100%;position:relative;margin:0;min-height:18px;text-align:left;overflow: hidden;width:100%;}
+.about_form .item{width:100%;position:relative;margin:0;min-height:18px;text-align:left;overflow: hidden;}
 .about_form .item .title{display:inline-block;position:absolute;left:0;top:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;text-align:right;width:70px;}
 .about_form .content2 .item .content{margin:0;width:auto;}
 .about_form .content1 .item .content{margin:0 0 0 80px;width:auto;}
 .about_form .content1 .item{height:34px;line-height:34px;}
 .about_form a{text-decoration:underline;}
-.about_form .content2 .aboutLogo{display: inline-block; width: 354px; height: 105px;}
+.about_form .content2 .aboutLogo{display: inline-block; width: 100%; height: 105px;}
 
-.about_form .swiper{padding:0 10px;position:absolute;left:0;top:0;}
-.about_form .progress{width:15px;height:5px;position:absolute;bottom:0;right:0;cursor:pointer;z-index:1;}
+.about_form .swiper{width:98%;position:absolute;left:0;top:0;}
+.about_form .progress{width:15px;height:5px;position:absolute;bottom:0;right:0;cursor:pointer;}
 .about_form .progressBar{width:5px;height:5px;background:rgba(255,255,255,0.25);position:absolute;right:0;top:0;cursor:pointer;border-radius:2px;}
 
 .about_form.rightToLeft{text-align:right;}
@@ -68,7 +68,7 @@ textarea{font-family:Calibri;}
 .bookmark_form .list_title .description{width:108px;border-right:1px solid rgba(255,255,255,0.1);}
 .bookmark_form .list_title .edit{}
 
-.bookmark_form .stage{overflow:hidden;width:100%;position:relative;padding:0 20px;margin:0 0 0 -20px;}
+.bookmark_form .stage{overflow:hidden;width:100%;position:relative;}
 .bookmark_form .swiper{width:100%;left:0;top:0;}
 
 .bookmark_form .progress{width:15px;height:5px;position:absolute;bottom:0;right:0;cursor:pointer;}
@@ -76,17 +76,17 @@ textarea{font-family:Calibri;}
 
 .bookmark_form .removeAll{width:100%;height:30px;line-height:30px;background:rgba(255,255,255,0.25);margin-top:5px;cursor:pointer;vertical-align:middle;text-align:center;display:none;}
 
-.bookmark_form .item{width:100%;height:30px;line-height:30px;vertical-align:middle;text-align:left;position:relative;margin-top:5px;padding-left:20px;}
+.bookmark_form .item{width:100%;height:30px;line-height:30px;vertical-align:middle;text-align:left;position:relative;margin-top:5px;}
 .bookmark_form .item span{padding:0 10px;display:inline-block;}
 .bookmark_form .item input{display:inline-block;}
 .bookmark_form .item .page{width:30px;}
 .bookmark_form .item .title{width:82px;height:20px;border:none;padding:0 10px;background:transparent;}
-.bookmark_form .item .colorSelection{margin:0;width:20px;height:18px;position:absolute;left:150px;top:6px;display:none;}
+.bookmark_form .item .colorSelection{margin:0;width:20px;height:18px;position:absolute;left:130px;top:6px;display:none;}
 .bookmark_form .item img{position:absolute;cursor:pointer;}
-.bookmark_form .item .save{left:180px;top:7px;display:none;}
-.bookmark_form .item .cancel{left:210px;top:7px;display:none;}
-.bookmark_form .item .edit{left:210px;top:7px;}
-.bookmark_form .item .delete{left:234px;top:7px;}
+.bookmark_form .item .save{left:160px;top:7px;display:none;}
+.bookmark_form .item .cancel{left:190px;top:7px;display:none;}
+.bookmark_form .item .edit{left:190px;top:7px;}
+.bookmark_form .item .delete{left:214px;top:7px;}
 
 .bookmark_form.rightToLeft{text-align:right;}
 .bookmark_form.rightToLeft .input_title{left:auto;right:0;direction:rtl;}
@@ -172,19 +172,6 @@ textarea{font-family:Calibri;}
 
 
 
-/*scrollbar*/
-::-webkit-scrollbar {
-  height: 0;
-  width: 0;
-}
-
-::-webkit-scrollbar-button {
-  height: 0;
-  width: 0;
-}
-
-
-
 .search_form{text-align:left;vertical-align:middle;line-height:20px;position:absolute;z-index:1000;left:-300px;top:0;width:250px;height:548px;background:#000000;
   padding:20px;color:#ffffff;font-size:15px;font-family:Calibri;position:absolute;}
 .search_form .input_search{width:210px;height:30px;border:none;padding:0 30px 0 10px;margin-top:10px;}
@@ -193,13 +180,13 @@ textarea{font-family:Calibri;}
 .search_form .close{right:20px;}
 .search_form.rightToLeft .close{left:20px;right:auto;}
 
-.search_form .stage{overflow:hidden;width:250px;height:460px;position:relative;margin:10px 0 0 -20px;padding:0 20px;}
+.search_form .stage{overflow:hidden;width:250px;height:460px;position:relative;margin:10px 0 0 0;}
 .search_form .swiper{width:100%;position:absolute;left:0;top:0;}
 
 .search_form .progress{width:15px;height:5px;position:absolute;bottom:0;right:0;cursor:pointer;}
 .search_form .progressBar{width:5px;height:5px;opacity:0.25;background:#ffffff;position:absolute;right:0;top:0;cursor:pointer;border-radius:2px;}
 
-.search_form .item{padding:5px 20px;cursor:pointer;}
+.search_form .item{padding:5px 0;cursor:pointer;}
 .search_form .item .description{font-size:15px;margin-top:3px;opacity:0.6;}
 .search_form .item:hover{background:rgba(255,255,255,0.25);}
 
@@ -346,305 +333,243 @@ textarea{font-family:Calibri;}
 	border-style:inset;
 	border-color: #aaaaaa;
 }
-  
-.fbTopBar{
-	position: absolute;
-  overflow: hidden;  
-  z-index: 99;
- 
-	top: 0px;
-	left: 0px;
 
-  width: 100%;
-	height: 46px;
-
-}
-
-.fbTopBar .button {
-	position : static;
-	display:inline;
-	width : 42px;
-	height : 46px;
-}
-
-.fbTopBar .button img {
-	width:22px;
-	height:22px;
-	margin-left : 10px;
-	margin-top : 12px;
-}
-
-.fbTopBar .button span{
-	display: none;
-}
-
-.fbToolBar{
-  position: absolute;
-  overflow: hidden;
-  z-index: 99;
- 
-  bottom: 0px;
-	left: 0px;
-
-  width : 100%;
-	height: 46px;
-
-}
+.bottom.right, .bottom.right button, .bottom.right .numbering{
+  position: absolute; 
+  top: 2px;
+  right: auto; }
+  a, .button{
+   cursor: pointer;
+  }
+  .bottom.right{
+  	 padding-right: 0px;
+  }
+  .top.right, .top.right button, .top.right .numbering{
+  position: absolute; 
+  top: 2px;
+  left: auto; }
+   .top.right{
+  	 padding-right: 0px;
+  }
+    .bottom.left, .bottom.left button, .bottom.left .numbering{
+  position: absolute; 
+  top: 2px;
+  right: auto; }
+   .bottom.left{
+  	 padding-left: 0px;
+  }
+	.fbToolBar{
 	
+    overflow: hidden;
+    position: absolute;
+    z-index: 99;
+   
+    width: 100%; 
+ 	bottom: 0px;
+  	left: 0px;
+ 	right: 0px;
+ 	
+  	height: 44px;
+  	
+  	opacity: 0.95;
+	}
 	
+		.fbTopBar{
+	
+    overflow: hidden;
+    position: absolute;
+    z-index: 99;
+   
+    width: 100%;
+ 	top: 0px;
+  	left: 0px;
+ 	right: 0px;
+ 	
+  	height: 50px;
+  	
+  	
+  	
+  	opacity: 0.95;
+	}
+	
+	.numbering, .numbering span {
+    /*color: #999999 !important;*/
+}
+.numbering{
+	bottom: 3px;
+}
+
 .pageNumber{
 	position : absolute;
 }
 
 .pageNumber input{
-	/* position: absolute; */
-	top:0;
-	border:transparent;
+	height:24px;
 	text-align : center;
-	vertical-align : top;
-	height : 25px;
-	line-height : 27px;
+	vertical-align : middle;
 	font-family:Arial;
+	
 }
 
 .pageNumber input:focus{
 	outline:none;
 }
-	
+
 .logoBar{
 	position: absolute;
-	left: 5px;
+	left: 0px;
 	top:0px;
+	width : 75px;
 	height:100%;
-	z-index: 1;
+	z-index: 2;
 }
 
-.searchBar{
-	position:absolute;
-	right : 42px;
-	background-color:gray;
-	margin-top:8px;
-	padding-left:10px;
-	padding-right:5px;
-}
-
-.preSearch{
-	background-color:gray;
-	display:inline;
-	float:left;
-}
-
-.preSearch input{
-	background-color:gray;
-	color:#AAAAAA;
-	font-family : Arial;
-	display:inline;
-	float:left;
-	border:0px solid transparent;
-	height:18px;
-	margin-top:5px;
-}
-
-.preSearch input:focus{
-	outline:none;
-}
-
-.searchBar .button{
-	position : static;
-	display:inline;
-	width : 30px;
-	height : 30px;
-}
-
-.searchBar .button img{
-	width:22px;
-	height:22px;
-	margin-left : 5px;
-	margin-top : 5px;
-}
-
-.searchBar .button span{
-	display:none;
+.buttonTopBar{
+	position: absolute;
+	height : 100%;
+	left: 0px;
+	right: auto;
+	z-index: 3;
 }
 
 .buttonBar{
-	display:inline;
-	height:100%;
-}
-
-.buttonBar.left{
-	float:left;
-}
-
-.buttonBar.right{
-	float:right;
-}
-
-.pageBar{
-	display:inline;
-	float:left;
-	height:100%;
-}
-	
-.buttonBar .button {
-	position : static;
-	display:inline;
-	width : 42px;
-	height : 46px;
-}
-
-.button.left{
-	float:left;
-}
-
-.button.right{
-	float:right;
-}
-
-.buttonBar .button img {
-	width:22px;
-	height:22px;
-	margin-left : 10px;
-	margin-top : 12px;
+	position: absolute;
+	width:100%;
+	height : 100%;
+	left: 0px;
+	right: auto;
+	z-index: 3;
 }
 
 .button span{
 	font-family : "Tahoma","sans-serif","Arial";
 	font-size : 12px;
 }
+	
+.buttonBar .button {
+	position : absolute;
+	width : 30px;
+	height : 30px;
+}
+
+.buttonBar .button img {
+	width:20px;
+	height: 20px;
+	margin-left : 6px;
+	margin-top : 6px;
+}
 
 .buttonBar .button span{
 	display:none;
 }
 
-.pageBar .button{
-	position:absolute;
-	width : 42px;
-	height : 46px;
+.buttonTopBar .button {
+	position : absolute;
+	width : 30px;
+	height : 30px;
 }
 
-.pageBar .button img {
-	width:22px;
-	height:22px;
-	margin-left : 10px;
-	margin-top : 12px;
+.buttonTopBar .button img {
+	width:16px;
+	height: 16px;
+	margin-left : 7px;
+	margin-top : 7px;
 }
 
-.pageBar .button span{
+.buttonTopBar .button span{
 	display:none;
 }
 
 .extendedBar{
 	overflow : hidden;
 	position : absolute;
-	z-index: 98;
+	z-index: 100;
 }
 
 .extendedBar .button{
-	position : absolute;
-	display:block;
-	width : 160px;
-	height : 46px;
+	position:absolute;
+	width : 150px;
+	height : 30px;
 }
 
-.extendedBar .button img{
-	width:22px;
-	height:22px;
-	margin-left : 5px;
-	margin-top : 12px;
+.extendedBar .button img {
+	width:16px;
+	height: 16px;
+	margin-left : 6px;
+	margin-top : 6px;
 }
-
 
 .extendedBar .button span{
 	position:absolute;
-	color : white;
-	margin-left:10px;
-	margin-top : 18px;
+	color:white;
+	margin-left:12px;
+	margin-top : 7px;
 }
 
 .extendedBar.rtl .button img{
-	width:22px;
-	height:22px;
+	width:16px;
+	height: 16px;
 	float : right;
-	margin-right : 5px;
-	margin-top : 12px;
+	margin-right : 6px;
+	margin-top : 6px;
 }
-
 
 .extendedBar.rtl .button span{
 	position:absolute;
-	color : white;
-	right :0px;
-	margin-right:30px;
-	margin-top : 18px;
-}
-
-.floatPageButton{
-	position : absolute;
-	z-index: 100;
-	width:63px;
-	height:160px;
-	opacity:0.95;
-}
-
-.floatPageButton img{
-	width:22px;
-	height:22px;
-	margin-left:19px;
-	margin-top:56px;
-}
-
-.floatPageButton span{
-	display : none;
+	color:white;
+	right : 0px;
+	margin-right:32px;
+	margin-top : 7px;
 }
 
 
-.thumbnail_win10{text-align:left;vertical-align:middle;line-height:20px;position:absolute;z-index:1000;left:0;top:0;padding:10px 0;width:100%;height:254px;background:#000000;color:#ffffff;font-size:12px;font-family:Calibri;}
-.thumbnail_win10 .close{right:20px;top:-24px;position:absolute;cursor:pointer;width:26px;height:18px;background-color:#000000;}
-.thumbnail_win10 .close img{position:absolute;left:10px;top:6px;}
+
+.thumbnail_win10{background:rgba(0,0,0,0.8);border: 1px solid #ddd;border-left:none;border-right:none;text-align:left;vertical-align:middle;line-height:20px;position:absolute;z-index:1000;left:0;top:0;padding:10px 0;width:100%;height:254px;background:#000000;color:#ffffff;font-size:12px;font-family:Calibri;}
+.thumbnail_win10 .close{padding:3px;right:10px;top:6px;position:absolute;cursor:pointer;width:12px;height:12px;}
 
 .thumbnail_win10 .stage{overflow:hidden;height:225px;margin:20px;position:relative;}
-.thumbnail_win10 .swiper{position:absolute;top:0;height:190px;}
+.thumbnail_win10 .swiper{position:absolute;top:7px;height:190px;}
 
-.thumbnail_win10 .progress{width:8px;height:8px;position:absolute;bottom:7px;right:0;cursor:pointer;}
-.thumbnail_win10 .progressBar{width:8px;height:8px;background:rgba(255,255,255,0.25);position:absolute;top:0;cursor:pointer;border-radius:4px;}
-
-.thumbnail_win10 p{height:20px;line-height:20px;bottom:0;vertical-align:middle;position:absolute;width:100%;bottom:0;left:0;text-align:center;}
+.thumbnail_win10 p{display:none;height:30px;line-height:30px;bottom:25px;vertical-align:middle;position:absolute;width:30%;left:35%;text-align:center;font-size: 20px;
+    font-weight: bold;box-shadow: 0 0 10px #fff; border-radius: 5px;}
 .thumbnail_win10 .item_focus{display:inline-block;height:190px;margin-right:10px;cursor:pointer;position:absolute;}
+
 .thumbnail_win10 .item_focus .title{display:none;}
+.thumbnail_win10 .item_focus .show_title{display: block;}
+
 .thumbnail_win10 .item{height:190px;position:absolute;}
 .thumbnail_win10 .item .title{display:none;}
+.thumbnail_win10 .item_focus.focus:hover>p.title{display:block;}
+.thumbnail_win10 .item_focus .item.focus:hover .title{display:block;}
+
 .thumbnail_win10 .item img{height:170px;width:120px;box-sizing:border-box;pointer-events:none;}
-
-.thumbnail_win10 .item.highlight img{border:2px solid #016BAF;}
-.thumbnail_win10 .item_focus.highlight .item.left img{border:2px solid #016BAF;border-width:2px 0 2px 2px;}
-.thumbnail_win10 .item_focus.highlight .item.right img{border:2px solid #016BAF;border-width:2px 2px 2px 0;}
-
-.thumbnail_win10 .item:hover img{border:2px solid #f18200;}
-.thumbnail_win10 .item_focus:hover .item.left img{border:2px solid #f18200;border-width:2px 0 2px 2px;}
-.thumbnail_win10 .item_focus:hover .item.right img{border:2px solid #f18200;border-width:2px 2px 2px 0;}
-
 .thumbnail_win10 .item .noThumbBg{height:170px;width:120px;box-sizing:border-box;pointer-events:none;}
 
-.thumbnail_win10 .item.highlight .noThumbBg{border:2px solid #016BAF;}
-.thumbnail_win10 .item_focus.highlight .item.left .noThumbBg{border:2px solid #016BAF;border-width:2px 0 2px 2px;}
-.thumbnail_win10 .item_focus.highlight .item.right .noThumbBg{border:2px solid #016BAF;border-width:2px 2px 2px 0;}
+.thumbnail_win10 .item:hover img{border:2px solid #016BAF;}
+.thumbnail_win10 .item_focus:hover .item.left img{border:2px solid #016BAF;border-width:2px 0 2px 2px;}
+.thumbnail_win10 .item_focus:hover .item.right img{border:2px solid #016BAF;border-width:2px 2px 2px 0;}
 
-.thumbnail_win10 .item:hover .noThumbBg{border:2px solid #f18200;}
-.thumbnail_win10 .item_focus:hover .item.left .noThumbBg{border:2px solid #f18200;border-width:2px 0 2px 2px;}
-.thumbnail_win10 .item_focus:hover .item.right .noThumbBg{border:2px solid #f18200;border-width:2px 2px 2px 0;}
+.thumbnail_win10 .item.highlight img{border:2px solid #EA4335;}
+.thumbnail_win10 .item_focus.highlight .item.left img{border:2px solid #EA4335;border-width:2px 0 2px 2px;}
+.thumbnail_win10 .item_focus.highlight .item.right img{border:2px solid #EA4335;border-width:2px 2px 2px 0;}
 
-.thumbnail_win10 .btn{}
-.thumbnail_win10 .leftBtn{}
-.thumbnail_win10 .rightBtn{}
+.thumbnail_win10 .item:hover .noThumbBg{border:2px solid #016BAF;}
+.thumbnail_win10 .item_focus:hover .item.left .noThumbBg{border:2px solid #016BAF;border-width:2px 0 2px 2px;}
+.thumbnail_win10 .item_focus:hover .item.right .noThumbBg{border:2px solid #016BAF;border-width:2px 2px 2px 0;}
+
+.thumbnail_win10 .item.highlight .noThumbBg{border:2px solid #EA4335;}
+.thumbnail_win10 .item_focus.highlight .item.left .noThumbBg{border:2px solid #EA4335;border-width:2px 0 2px 2px;}
+.thumbnail_win10 .item_focus.highlight .item.right .noThumbBg{border:2px solid #EA4335;border-width:2px 2px 2px 0;}
 
 
 
-.videogallery_form{text-align:left;vertical-align:middle;line-height:20px;position:absolute;z-index:1000;color:#ffffff;margin:auto;width:700px;background:#000000;padding:20px;font-size:15px;font-family:Calibri;position:absolute;overflow:hidden;}
+.videogallery_form{text-align:left;vertical-align:middle;line-height:20px;position:absolute;z-index:1000;color:#ffffff;margin:auto;width:700px;background:#000000;padding:10px 20px 20px 20px;font-size:15px;font-family:Calibri;position:absolute;overflow:hidden;}
 .videogallery_form .form_title{font-size:18px;line-height:20px;}
 .videogallery_form .title{font-size:18px;line-height:20px;}
-.videogallery_form .video{width:334px;height:223px;background:rgba(255,255,255,0.25);margin-top:15px;}
-.videogallery_form .video_list{width:330px;height:223px;position:absolute;right:15px;top:50px;}
+.videogallery_form .close {right: 20px;top: 12px;padding: 3px;position: absolute;cursor: pointer;}
+.videogallery_form.rightToLeft .close {left: 20px;right:auto;}
+.videogallery_form .video{width:335px;height:223px;background:rgba(255,255,255,0.25);margin-top:15px;}
+.videogallery_form .video_list{width:340px;height:223px;position:absolute;right:15px;top:50px;}
 .videogallery_form .info{margin-top:15px;}
 .videogallery_form .info .description{width:100%;}
 .videogallery_form .description{opacity:0.6;}
